--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
@@ -508,3 +508,42 @@
 	left: 50%;
 	transform: translate(-90%, -80%);
   }
+  .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+.recipeName{
+	color:black;
+}
+.card-text{
+	text-align: right;
+	color: grey;
+}
+.videoText{
+	margin-left: 100px;
+}
+
+  .imagegrid-container {
+    display: flex;
+    height: 450px;
+    grid-template-columns: auto auto auto;
+    grid-gap: 50px;
+	padding-left: 75px;
+	padding-top: 20px;
+  }
+  .recipeVideo{
+	  position: relative;
+  }
+  .recipeVideo img{
+	width: 300px;
+	height: 400px;
+	border-radius: 25px;
+  }
+  .recipeVideoText{
+	position: absolute;
+	color : white;
+	bottom: 100px;
+	left: 16px;
+	
+  }
