Trabajo en Angular

--- a/sabor-compartido/src/app/header/header.component.html
+++ b/sabor-compartido/src/app/header/header.component.html
@@ -26,7 +26,7 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="post.html">
-  			<img src="./../../assets/img/search_icon.png">
+  			<img src="/assets/img/search_icon.PNG">
   		</a>
       	<a href="iniciar_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
