--- a/sabor-compartido/src/app/app.component.html
+++ b/sabor-compartido/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
+<app-footer></app-footer>
 <script src="./../vendor/jquery/jquery.min.js"></script>
 <script src="./../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
