--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
@@ -6,7 +6,7 @@
  body{
  	font-size:20px;
  	color:#212529;
- 	font-family: "Lato", san-serif;
+ 	font-family: "Lato", sans-serif;
  }
 
  ul{
@@ -487,19 +487,22 @@
 .frontImage{
 	position: relative;
 	display: block;
-	width: 1000px;
-	height: 500px;
+	width: 80%;
+	height: 10%;
+	margin-left: 10%;
 	object-fit: cover;
 	overflow: hidden;
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 25px;
+	max-height: 700px;
+	
+	
 }
 .frontImage img{
 	margin: -0px 0px 0px 0px;
-
-	margin-left: auto;
+	width: 100%;
+	height: 100%;
+	max-height: 500px;
 	margin-right: auto;
+	border-radius: 25px;
 }
 .imageText {
 	position: absolute;
@@ -507,12 +510,23 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-90%, -80%);
+	margin-top: 5%;
+	font-family: "Lato", san-serif;
   }
   .card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: cover;
 }
+
+.imageText h1{
+	font-size: 4vw;
+}
+
+.imageText h4{
+	font-size: 2vw;
+}
+
 .recipeName{
 	color:black;
 }
