correcciones al formulario de contactos

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/about.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/about.css
@@ -558,6 +558,10 @@
 
 .teamCont{
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 .teamCont img{
 	width: 150px;
