--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
@@ -21,7 +21,7 @@
 .image-container img {
     width: 100%;
     height: 100%;
-    border-radius: 5%;
+    border-radius: 3px;
 }
 
 .icon-container img{
@@ -41,15 +41,19 @@
 
 .description-title{
     display: flex;
-    font-size: 40px;
+   
     border-bottom: 1.5px solid red;
 }
+    .description-title h2{
+        font-size: 40px;
+    }
 
     .description-title h2, .description-content p{
         color: #47525E;
     }
 .description-content p{
     font-weight: 500;
+    font-size: 26px;
 }
 
 .recipe-specs{
@@ -90,12 +94,15 @@
     border-right: 1px solid #ccc;
     border-left: 1px solid #ccc;
 }
-
-.recipe-author span{
-    font-size: 14px;
-    color:#ccc;
-    font-weight: lighter;
+.recipe-author{
+    margin-top: 10px;
 }
+
+    .recipe-author span{
+        font-size: 14px;
+        color:#47525E;
+
+    }
 
 
 /*
@@ -129,13 +136,16 @@
 .ingredients-list li{
     border-bottom: 1px solid #47525E ;
     font-size: 18px;
-    font-weight: lighter;
     padding: 12px 0;
 }
 
+.number{
+    font-size: 26px;
+}
+
 .step-description{
+    color: #8190A5;
     font-size: 18px;
-    font-weight: lighter;
 }
 
 .steps-title{
@@ -143,6 +153,7 @@
 }
 
 .etiquetas{
+    cursor: pointer;
     padding-top: 20px;
 }
 
@@ -161,53 +172,39 @@
     margin-right: 10px;
 }
 
-footer{
-    padding-bottom: 0;
-}
+@media only screen and (max-width:500px){
+    .image-container{
+        display: none;
+    }
 
-.actual-footer{
-    display: flex;
-    width: 100%;
-    background-color: #F95F62;
-    padding: 50px 20px;
-}
+    .recipe-description-container{
+        grid-template-columns: 100%;
+        width: 100%;
+        padding: 10px 20px;
+    }
+        .recipe-description-content-right{
+            width: 100%;
+        }
+	.recipe-specs{
+        justify-content: center;
+        align-items: center;
+		flex-direction: column;
+    }
 
-.first-half{
-    color:#fff;
-    display: flex;
-}
+    .content{
+        border: 0;
+        margin-bottom: 20px;
+    }
 
-.nav-options, .other-options{
-    display: flex;
-    flex-direction: column;
-    margin-right: 20px;
-    font-size: 18px;
-    color: #F7F7F7;
-}
+    .content:nth-child(2){
+        border: 0px;
+    }
+    
+    .steps-container-center{
+        flex-direction: column;
+    }
 
-
-.email-form{
-    display: flex;
-}
-.email-form input{
-    display: flex;
-    padding: 5px 10px;
-    border: none;
-    margin-right: 10px;
-    border-radius: 5px;
-}
-
-.get-out-newsletter span{
-    color: #F7F7F7;
-    font-size: 18px;
-}
-
-#subscribe-btn{
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color:#47525E;
-    font-size: 18px;
+    .actual-footer{
+        flex-direction: column;
+    }
 }
