--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
@@ -338,12 +338,16 @@
  	background-color: transparent;
 	background-clip: padding-box;
  	max-width: 100%;
-	width: 800px;
+	width: 100%;
 	border: 0 none;
 	padding: 0 10px;
     background-clip: border-box;
 	color: #fff;
 	border: 1px solid #eaecf0;
+ }
+
+ .row > form {
+	 width: 100%;
  }
 
  .floating-label-form-group input::-webkit-input-placeholder,.floating-label-form-group textarea::-webkit-input-placeholder{
@@ -553,7 +557,23 @@
     grid-gap: 50px;
 	padding-left: 75px;
 	padding-top: 20px;
+	overflow: auto;
+	scroll-behavior: smooth;
+
+	
   }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .imagegrid-container::-webkit-scrollbar {
+	display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .imagegrid-container {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+  }
+  
+  
   .recipeVideo{
 	  position: relative;
   }
@@ -570,6 +590,8 @@
 	
   }
   @media only screen and (min-width:992px){
+	
+
 	li.IniRegNav{
 		display: none;
 	}
@@ -627,19 +649,33 @@
 		font-size: 18px;
 	}
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 990px){
 	.actual-footer > div{
-        margin-bottom: 25px;
-    }
-        .email-form{
-            flex-direction: column;
-        }
+		margin-bottom: 25px;
+		width: 100%;
+	}
 
-        .email-form input{
-            margin: 0;
-        }
+	.get-our-newsletter{
+		margin-left: 10%;
+	}
+	
+	.actual-footer{
+        flex-direction: column;
+	}
+        .email-form{
+			flex-direction: column;
+			width: 80%;
+			margin-left: 10%;
+		}
+		
+		.email-form > input{
+			margin-right: 0;
+		}
+
 
         #subscribe-btn{
-            margin-top: 20px;
-        }
+			margin-top: 20px;
+			
+		}
+	
 }
