--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
@@ -178,6 +178,11 @@
     margin-right: 10px;
 }
 
+.lista-etiquetas span:hover{
+    background-color: #eb4a36;
+    color: white;
+}
+
 @media only screen and (max-width:990px){
     .image-container{
         display: none;
