--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
@@ -570,7 +570,7 @@
   /* Hide scrollbar for IE, Edge and Firefox */
   .imagegrid-container {
 	-ms-overflow-style: none;  /* IE and Edge */
-	scrollbar-width: none;  /* Firefox */
+	/*scrollbar-width: none;   Firefox */
   }
   
   
