tutorial guiado update

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/about.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/about.css
@@ -355,9 +355,9 @@
  	border-top:1px solid #dee2e6;
  }
 
- footer{
+ /* footer{
  	padding:50px 0 65px;
- }
+ } */
 
  footer .list-inline{
  	margin:0;
