--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/recipe.css
@@ -227,4 +227,9 @@
         flex-direction: column;
     }
 
+    span a{
+        text-decoration: none;
+        color: #fff !important;
+    }
+
 }
