Arreglado el navbar

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/css/homepage.css
@@ -761,7 +761,19 @@
 		grid-area: 1 / 1 / 2 / 2;
 	}
 }
-@media only screen and (max-width:1200px){ 
+
+
+@media only screen and (max-width:1200px){
+	.navbar-nav{
+		margin-left: 1px;
+	}
+
+	.nuevaReceta{
+		display: none;
+	}
+}
+
+@media only screen and (max-width:992px){ 
 	
 	.navcontainer{
 		flex-direction: column;
