--- a/proyectoAngular/saboresCompartidos/src/styles.css
+++ b/proyectoAngular/saboresCompartidos/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "../src/assets/vendor/bootstrap/css/bootstrap-grid.min.css";
+
+@import "../src/assets/vendor/fontawesome-free/css/all.min.css";
+@import "../src/styles.css";
+@import "../src/assets/css/clean-blog.min.css";
+@import "../src/assets/css/homepage.css";
+
+html {
+    min-height: 100%;
+}
