componente de perfil

--- a/proyectoAngular/saboresCompartidos/src/app/header/header.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/header/header.component.html
@@ -42,6 +42,7 @@
         <div id="registro" class="collapse navbar-collapse">
           <a routerLink="/registro" routerLinkActive="active" class="nav-op red-button button">Registro</a>
         </div>
+        <a routerLink="/perfil" routerLinkActive="active" class="circle-icon google_plus"><i class="fas fa-user"></i></a>
       </div>
     </div>
   </nav>
