--- a/proyectoAngular/saboresCompartidos/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/inicio-sesion/inicio-sesion.component.html
@@ -37,7 +37,7 @@
           <a class="text-muted" href="#">Olvidaste tu contraseña?</a>
         </div>
         <div class="form-group floating-label-form-group controls inner_pad">
-          <button class="red-button button">Sign In</button>
+          <a routerLink="/perfil" routerLinkActive="active"><button class="red-button button">Sign In</button></a>
         </div>
       </form>
     </div>
