--- a/proyectoAngular/saboresCompartidos/src/app/recetas/recetas.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/recetas/recetas.component.html
@@ -23,7 +23,7 @@
 
           <div class="card col-lg-4 col-md-6 mb-4" data-step="2" data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta">
             <div class="h-100">
-              <a routerLink="/receta" routerLinkActive="active"><img class="card-img-top" src="../../assets/img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
+                <a [routerLink]="" (click)="recetaDetails('1234')" routerLinkActive="active"><img class="card-img-top" src="../../assets/img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a routerLink="/receta" routerLinkActive="active" class = "recipeName">Chana Masala</a>
