formControl en inicio_sesion, cambiando botones por input type:submit y fetch de países

--- a/proyectoAngular/saboresCompartidos/src/app/contact/contact.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/contact/contact.component.html
@@ -12,28 +12,28 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Nombre</label>
-              <input type="text" id="name" required data-validation-required-message="Por favor ingresa tu nombre.">
+              <input class="floating-label-form-group-input" type="text" id="name" required data-validation-required-message="Por favor ingresa tu nombre.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Apellido</label>
-              <input type="text" id="lastName" required data-validation-required-message="Por favor ingresa tu apellido.">
+              <input class="floating-label-form-group-input" type="text" id="lastName" required data-validation-required-message="Por favor ingresa tu apellido.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Email</label>
-              <input type="email" id="email" required data-validation-required-message="Please enter your email address.">
+              <input class="floating-label-form-group-input" type="email" id="email" required data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label for="date">Fecha de nacimiento:</label>
-              <input type="date" id="date" name="date" min="1920-01-01" max="2020-01-01" required>
+              <input class="floating-label-form-group-input" type="date" id="date" name="date" min="1920-01-01" max="2020-01-01" required>
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -56,7 +56,7 @@
           <br>
           <div id="success"></div>
           <div class="text-center">
-          	<button type="submit" class="btn-primary" id="sendMessageButton">Send</button>
+          	<input type="submit" class="btn-primary" value="Enviar">
           </div>
         </form>
       </div>
