--- a/proyectoAngular/saboresCompartidos/src/app/registro/registro.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/registro/registro.component.html
@@ -27,18 +27,18 @@
       <form class="text-center">
         <div class="form-group floating-label-form-group controls inner_pad">
           <label class="text-muted">Nombre de usuario</label>
-          <input class="dark-font" type="text" required>
+          <input class="dark-font floating-label-form-group-input" type="text" required>
         </div>
         <div class="form-group floating-label-form-group controls inner_pad">
           <label class="text-muted">Email</label>
-          <input class="dark-font" type="email" required>
+          <input class="dark-font floating-label-form-group-input" type="email" required>
         </div>
         <div class="form-group floating-label-form-group controls inner_pad">
           <label class="text-muted">Contraseña</label>
-          <input class="dark-font" type="password" required>
+          <input class="dark-font floating-label-form-group-input" type="password" required>
         </div>
         <div class="form-group floating-label-form-group controls inner_pad">
-          <button class="red-button button">Sign Up</button>
+          <input type="submit" class="red-button button" value="Registrarse">
         </div>
       </form>
     </div>
