--- a/proyectoAngular/saboresCompartidos/src/assets/css/homepage.css
+++ b/proyectoAngular/saboresCompartidos/src/assets/css/homepage.css
@@ -332,7 +332,7 @@
 	vertical-align: top;
  }
 
- .floating-label-form-group input,.floating-label-form-group textarea{
+ .floating-label-form-group-input,.floating-label-form-group textarea{
  	border-radius: 500px;
  	height: 36px;
  	background-color: transparent;
