fetch de comentarios

--- a/proyectoAngular/saboresCompartidos/src/app/noticia/noticia.component.html
+++ b/proyectoAngular/saboresCompartidos/src/app/noticia/noticia.component.html
@@ -8,7 +8,7 @@
         <p id="ArtSubtitle" class="steps-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae felis nisl. Nam eu dignissim eros. Phasellus congue dolor nisl, in ultrices est vehicula a.</p>
       </div>
       <div class="image-container">
-        <img src = "../../assets/img/chef_news.webp" alt="noticia_chef">
+        <img src = "https://saborescompartidos.herokuapp.com{{noticia['image']}}" alt="noticia_chef">
       </div>
     </div>
   </div>
